--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.4",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "lodash.merge": "^4.6.2",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/lodash.merge": "^4.6.7",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.4"
   }
 }
