--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
     "@chakra-ui/react": "^2.3.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.4.0",
     "framer-motion": "^6",
+    "graphql": "^16.6.0",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
