--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,12 @@
     "@graphql-tools/schema": "^9.0.4",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "lodash.merge": "^4.6.2",
+    "next-auth": "^4.12.3",
+    "react": "^18.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
