--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-tools/schema": "^9.0.4",
+    "@prisma/client": "^4.4.0",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
     "dotenv": "^16.0.3",
@@ -19,12 +20,12 @@
     "graphql": "^16.6.0",
     "lodash.merge": "^4.6.2",
     "next-auth": "^4.12.3",
-    "react": "^18.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
     "nodemon": "^2.0.20",
+    "prisma": "^4.4.0",
     "typescript": "^4.8.4"
   }
 }
