--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -21,7 +21,8 @@
     "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0"
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
